--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-     <title>Solarize Multi purpose Template</title>
+     <title>Neutro Water Tech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <link rel="stylesheet" type="text/css" href="css/master.css"/> 
