added new wtp page

--- a/contact-us.html
+++ b/contact-us.html
@@ -33,11 +33,11 @@
 					<ul>
 						<li><i class="fa fa-envelope-o"></i>
 	</li>
-						<li class="addrs">info@yourdomain.com </li>
+						<li class="addrs">sales@neutro.in</li>
 						<li><i class="fa fa-phone"></i>
 
 	</li>
-						<li class="addrs">+88 123 456 7890 </li>
+						<li class="addrs">+91 9790712079</li>
 					</ul>
 				</div>
 				<div class="span4 social-icon pull-left">
@@ -66,10 +66,15 @@
 			
             <div class="collapse navbar-collapse float-left" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="index.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
-					<li><a href="service.html">Services</a></li>
-                    <li><a href="contact-us.html">contact us</a></li>
+                    <li class=""><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+					<!-- <li><a href="service.html">Services</a></li> -->
+					<li><a href="wwtp.html">WWTP</a></li>
+					<li><a href="wtp.html">WTP</a></li>
+					<li><a href="service.html">CHEMICALS</a></li>
+					<li><a href="service.html">ACCESSORIES</a></li>
+					<li><a href="service.html">CARRIER</a></li>
+                    <li><a href="contact-us.html">CONTACT US</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
 			<div class="clearfix"></div>
@@ -105,22 +110,25 @@
 					<div class="col-md-4 col-sm-4 col-xs-12 servicesone">
 						<i class="fa fa-leaf"></i>
 						<div class="float-left col-md-9 col-sm-9 col-xs-12">
-							<h4>Address</h4>
-							<p>No: 18, Priya Nagar, First Cromms<br/>Urappakkkam, Chennai</p>
+							<h4>India</h4>
+							<p>No: 18, Priya Nagar,First Cross<br/>Urappakkkam, Chennai</p>
+                            <br>
+                            <h4>Dubai</h4>
+							<p>GODOWN INDUSTRIAL AREA 13<br/>Sharjah , UAE</p>
 						</div>	
 					</div>	
 					<div class="col-md-4 col-sm-4 col-xs-12 servicesone">
 						<i class="fa fa-envelope-o"></i>
 						<div class="float-left col-md-9 col-sm-9 col-xs-12">
 							<h4>Email</h4>
-							<p>info@example.com <br/>www.neutroensys.com</p>
+							<p> sales@neutro.in <br/>www.neutrowatech.com</p>
 						</div>	
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 servicesone">
 						<i class="fa fa-phone"></i>
 						<div class="float-left col-md-9 col-sm-9 col-xs-12">
 							<h4>Phone</h4>
-							<p>Phone :+91 9047860696, +91 9790712079</p>
+							<p>Phone :+91 9790712079 <br>+91 9047860696</p>
 						</div>	
 					</div>
 				</div>
@@ -141,8 +149,7 @@
                             <div id="footer">
 								<div class="container padding-0 footer">
 									<div id="map" style="width:100%;height:300px;">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317716.364741452!2d-0.10159865000000001!3d51.52864165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75:0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2s!4v1398352500211" style="border:0;width:100%;height:300px;"></iframe>
-				
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.771840949072!2d80.07025904597954!3d12.858007867965252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f64609dd5765%3A0xaeba445e25ccd64e!2sNEUTRO+WATER+TECH!5e0!3m2!1sen!2sin!4v149114446891" style="border:0;width:100%;height:300px;"></iframe>
 									</div> 
 									<div class="footer-widget padding-bottom-40 padding-top-40">
 										<div class="col-md-3 col-sm-3 col-xs-12 widget">
