--- a/service.html
+++ b/service.html
@@ -32,11 +32,11 @@
 					<ul>
 						<li><i class="fa fa-envelope-o"></i>
 	</li>
-						<li class="addrs">info@yourdomain.com </li>
+						<li class="addrs">sales@neutro.in</li>
 						<li><i class="fa fa-phone"></i>
 
 	</li>
-						<li class="addrs">+88 123 456 7890 </li>
+						<li class="addrs">+91 9790712079</li>
 					</ul>
 				</div>
 				<div class="span4 social-icon pull-left">
@@ -65,10 +65,15 @@
 			
             <div class="collapse navbar-collapse float-left" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="index.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
-					<li><a href="service.html">Services</a></li>
-                    <li><a href="contact-us.html">contact us</a></li>
+                    <li class=""><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+					<!-- <li><a href="service.html">Services</a></li> -->
+					<li><a href="wwtp.html">WWTP</a></li>
+					<li><a href="wtp.html">WTP</a></li>
+					<li><a href="service.html">CHEMICALS</a></li>
+					<li><a href="service.html">ACCESSORIES</a></li>
+					<li><a href="service.html">CARRIER</a></li>
+                    <li><a href="contact-us.html">CONTACT US</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
 			<div class="clearfix"></div>
@@ -76,6 +81,7 @@
        </div> 
 	   
     </div> 
+	 
 	
   <!--===========================================END MAIN NAV==============================================-->	
 		<!--===========================================END MAIN NAV==============================================-->	
