--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
 					<ul>
 						<li><i class="fa fa-envelope-o"></i>
 	</li>
-						<li class="addrs">info@yourdomain.com </li>
+						<li class="addrs">sales@neutro.in</li>
 						<li><i class="fa fa-phone"></i>
 
 	</li>
-						<li class="addrs">+88 123 456 7890 </li>
+						<li class="addrs">+91 9790712079</li>
 					</ul>
 				</div>
 				<div class="span4 social-icon pull-left">
@@ -66,10 +66,15 @@
 			
             <div class="collapse navbar-collapse float-left" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="index.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
-					<li><a href="service.html">Services</a></li>
-                    <li><a href="contact-us.html">contact us</a></li>
+                    <li class=""><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+					<!-- <li><a href="service.html">Services</a></li> -->
+					<li><a href="wwtp.html">WWTP</a></li>
+					<li><a href="wtp.html">WTP</a></li>
+					<li><a href="service.html">CHEMICALS</a></li>
+					<li><a href="service.html">ACCESSORIES</a></li>
+					<li><a href="service.html">CARRIER</a></li>
+                    <li><a href="contact-us.html">CONTACT US</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
 			<div class="clearfix"></div>
@@ -129,10 +134,6 @@
                               <div class="">
                             <div id="footer">
 								<div class="container padding-0 footer">
-									<div id="map" style="width:100%;height:300px;">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317716.364741452!2d-0.10159865000000001!3d51.52864165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75:0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2s!4v1398352500211" style="border:0;width:100%;height:300px;"></iframe>
-				
-									</div> 
 									<div class="footer-widget padding-bottom-40 padding-top-40">
 										<div class="col-md-3 col-sm-3 col-xs-12 widget">
 											<h4 class="wid-title">About Company</h4>
