--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 					<li><a href="industries.html">INDUSTRIES</a></li>
 					<li><a href="chemicals.html">CHEMICALS</a></li>
 					<li><a href="accessories.html">ACCESSORIES</a></li>
-					<li><a href="careers.html">CARRIER</a></li>
+					<li><a href="careers.html">CAREERS</a></li>
                     <li><a href="contact-us.html">CONTACT US</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
