--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+		<meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+       
+		<!-- This site is optimized with the Yoast SEO plugin v4.0.2 - https://yoast.com/wordpress/plugins/seo/ -->
+		<meta name="description" content=" Neutro water tech is a leader of waste water treatment sector with ability to design, erection & commissioning, and execute tertiary, turnkey solutions for water and waste water managements."/>
+		<meta name="keyywords" content="Chennai,Water treatement, Reverse Osmosis, Chemicals"/>
+		<meta name="robots" content="noodp"/>
+		<link rel="canonical" href="http://neutrowatertech.com/" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content=" Neutro water tech is a leader of waste water treatment sector with ability to design, erection & commissioning, and execute tertiary, turnkey solutions for water and waste water managements." />
+		<meta property="og:description" content=" Neutro water tech is a leader of waste water treatment sector with ability to design, erection & commissioning, and execute tertiary, turnkey solutions for water and waste water managements." />
+		<meta property="og:url" content="http://neutrowatertech.com/" />
+		<meta property="og:site_name" content="yaavarum" />
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:description" content=" Neutro water tech is a leader of waste water treatment sector with ability to design, erection & commissioning, and execute tertiary, turnkey solutions for water and waste water managements." />
+		<meta name="twitter:title" content="Neutro water tech is a leader of waste water treatment sector with ability to design, erection & commissioning, and execute tertiary, turnkey solutions for water and waste water managements." />
+		<meta name="twitter:creator" content="@com" />
+
      <title>Neutro Water Tech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -467,6 +488,20 @@
 	
 	<script src="js/carousel/team.js"></script>  
 	<script src="js/app.js"></script>	
+
+	<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/58fdc80c64f23d19a89aee2b/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 	 
 </body>
 </html>
