--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        
 		<!-- This site is optimized with the Yoast SEO plugin v4.0.2 - https://yoast.com/wordpress/plugins/seo/ -->
 		<meta name="description" content=" Neutro water tech is a leader of waste water treatment sector with ability to design, erection & commissioning, and execute tertiary, turnkey solutions for water and waste water managements."/>
-		<meta name="keyywords" content="Chennai,Water treatement, Reverse Osmosis, Chemicals"/>
+		<meta name="keyywords" content="Chennai,Water treatement, Reverse Osmosis, Chemicals, Chemical supply, water plant, low cost, supply, RO"/>
 		<meta name="robots" content="noodp"/>
 		<link rel="canonical" href="http://neutrowatertech.com/" />
 		<meta property="og:locale" content="en_US" />
@@ -55,7 +55,7 @@
 
 						<li><i class="fa fa-envelope-o"></i>
 	</li>
-						<li class="addrs"> <a href="mailto:sales@neutro.in ?Subject=Job" target="_top" style="color: white;">sales@neutro.in </a></li>
+						<li class="addrs"> <a href="mailto:sales@neutro.in?Subject=Sales Enquiry" target="_top" style="color: white;">sales@neutro.in </a></li>
 						<li><i class="fa fa-phone"></i>
 
 	</li>
