--- a/industries.html
+++ b/industries.html
@@ -88,6 +88,17 @@ background: linear-gradient(to left, #d53369 , #cbad6d); /* W3C, IE 10+/ Edge, F
     text-align: justify;
     }
     </style>
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102511722-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
     
@@ -165,7 +176,7 @@ background: linear-gradient(to left, #d53369 , #cbad6d); /* W3C, IE 10+/ Edge, F
 							<div class="right-line"></div>
 							<div class="clearfix"></div>
 						</div>
-						<a href="/">home</a><span>/</span><a href="/service.html">Our Services</a>
+						
 				</div>	
 			</div>
 		
