--- a/service.html
+++ b/service.html
@@ -39,6 +39,17 @@
       <script src="http://takethemes.com/solarize/version3/js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102511722-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
     
@@ -117,7 +128,7 @@
 							<div class="right-line"></div>
 							<div class="clearfix"></div>
 						</div>
-						<a href="/">home</a><span>/</span><a href="/service.html">Our Services</a>
+						
 				</div>	
 			</div>
 		
